web client: use fetch to upload files
also add REST API to upload a single file as POST body
